--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,106 +6,122 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <TextView
-        android:id="@+id/mainTitle"
-        android:layout_width="wrap_content"
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/container"/>
+
+<!--    <TextView-->
+<!--        android:id="@+id/mainTitle"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:text="Start a Workout!"-->
+<!--        android:textSize="34sp"-->
+<!--        android:textStyle="bold"-->
+<!--        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--        app:layout_constraintHorizontal_bias="0.498"-->
+<!--        app:layout_constraintLeft_toLeftOf="parent"-->
+<!--        app:layout_constraintRight_toRightOf="parent"-->
+<!--        app:layout_constraintTop_toTopOf="parent"-->
+<!--        app:layout_constraintVertical_bias="0.081" />-->
+
+<!--    <SeekBar-->
+<!--        android:id="@+id/timeSeekBar"-->
+<!--        android:layout_width="232dp"-->
+<!--        android:layout_height="21dp"-->
+<!--        android:max="32"-->
+<!--        android:progress="0"-->
+<!--        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintHorizontal_bias="0.497"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toBottomOf="@+id/mainTitle"-->
+<!--        app:layout_constraintVertical_bias="0.298" />-->
+
+<!--    <TextView-->
+<!--        android:id="@+id/timeText"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:text="3 Minutes"-->
+<!--        android:textSize="18sp"-->
+<!--        app:layout_constraintBottom_toTopOf="@+id/timeSeekBar"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintHorizontal_bias="0.498"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toBottomOf="@+id/mainTitle"-->
+<!--        app:layout_constraintVertical_bias="0.711" />-->
+
+<!--    <Button-->
+<!--        android:id="@+id/button"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:onClick="sendMessage"-->
+<!--        android:text="Start"-->
+<!--        app:backgroundTint="@empty"-->
+<!--        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintHorizontal_bias="0.498"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toBottomOf="@+id/timeSeekBar"-->
+<!--        app:layout_constraintVertical_bias="0.748" />-->
+
+<!--    <Button-->
+<!--        android:id="@+id/focusButton"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginEnd="68dp"-->
+<!--        android:text="Full Body"-->
+<!--        android:textColor="@color/black"-->
+<!--        app:backgroundTint="@color/white"-->
+<!--        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintTop_toTopOf="parent"-->
+<!--        app:layout_constraintVertical_bias="0.701" />-->
+
+<!--    <Button-->
+<!--        android:id="@+id/intensityButton"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginStart="64dp"-->
+<!--        android:text="Advanced"-->
+<!--        android:textColor="@color/black"-->
+<!--        app:backgroundTint="@color/white"-->
+<!--        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toTopOf="parent"-->
+<!--        app:layout_constraintVertical_bias="0.701" />-->
+
+<!--    <TextView-->
+<!--        android:id="@+id/textView4"-->
+<!--        android:layout_width="93dp"-->
+<!--        android:layout_height="27dp"-->
+<!--        android:layout_marginBottom="40dp"-->
+<!--        android:text="Difficulty"-->
+<!--        android:textAlignment="center"-->
+<!--        app:layout_constraintBottom_toTopOf="@+id/intensityButton"-->
+<!--        app:layout_constraintEnd_toEndOf="@+id/intensityButton"-->
+<!--        app:layout_constraintStart_toStartOf="@+id/intensityButton" />-->
+
+<!--    <TextView-->
+<!--        android:id="@+id/focusLabel"-->
+<!--        android:layout_width="93dp"-->
+<!--        android:layout_height="27dp"-->
+<!--        android:layout_marginBottom="40dp"-->
+<!--        android:text="Focus"-->
+<!--        android:textAlignment="center"-->
+<!--        app:layout_constraintBottom_toTopOf="@+id/focusButton"-->
+<!--        app:layout_constraintEnd_toEndOf="@+id/focusButton"-->
+<!--        app:layout_constraintStart_toStartOf="@+id/focusButton" />-->
+
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottomNav"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Start a Workout!"
-        android:textSize="34sp"
-        android:textStyle="bold"
+        android:layout_alignParentBottom="true"
+        android:background="?android:attr/windowBackground"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.081" />
+        app:menu="@menu/menu" />
 
-    <SeekBar
-        android:id="@+id/timeSeekBar"
-        android:layout_width="232dp"
-        android:layout_height="21dp"
-        android:max="32"
-        android:progress="0"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/mainTitle"
-        app:layout_constraintVertical_bias="0.298" />
-
-    <TextView
-        android:id="@+id/timeText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="3 Minutes"
-        android:textSize="18sp"
-        app:layout_constraintBottom_toTopOf="@+id/timeSeekBar"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/mainTitle"
-        app:layout_constraintVertical_bias="0.711" />
-
-    <Button
-        android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:onClick="sendMessage"
-        android:text="Start"
-        app:backgroundTint="@empty"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/timeSeekBar"
-        app:layout_constraintVertical_bias="0.748" />
-
-    <Button
-        android:id="@+id/focusButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="68dp"
-        android:text="Full Body"
-        android:textColor="@color/black"
-        app:backgroundTint="@color/white"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.701" />
-
-    <Button
-        android:id="@+id/intensityButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="64dp"
-        android:text="Advanced"
-        android:textColor="@color/black"
-        app:backgroundTint="@color/white"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.701" />
-
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="93dp"
-        android:layout_height="27dp"
-        android:layout_marginBottom="40dp"
-        android:text="Difficulty"
-        android:textAlignment="center"
-        app:layout_constraintBottom_toTopOf="@+id/intensityButton"
-        app:layout_constraintEnd_toEndOf="@+id/intensityButton"
-        app:layout_constraintStart_toStartOf="@+id/intensityButton" />
-
-    <TextView
-        android:id="@+id/focusLabel"
-        android:layout_width="93dp"
-        android:layout_height="27dp"
-        android:layout_marginBottom="40dp"
-        android:text="Focus"
-        android:textAlignment="center"
-        app:layout_constraintBottom_toTopOf="@+id/focusButton"
-        app:layout_constraintEnd_toEndOf="@+id/focusButton"
-        app:layout_constraintStart_toStartOf="@+id/focusButton" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
